--- a/templates/channel_list.html
+++ b/templates/channel_list.html
@@ -1,6 +1,23 @@
 {% extends "layout.html" %}
 {% block script %}
-<script src="{{ url_for('static', filename='channel_list.js') }}"></script>
+    <script src="{{ url_for('static', filename='channel_list.js') }}"></script>
+{% endblock %}
 {% block body %}
-    <center><h1>Channel List</h1></center>
+    <div class="wrapper">
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <img src="static/tiger2.png">
+                <h2>FLACK</h2>
+            </div>
+            <ul class="list-unstyled components">
+                <p>Channels</p>
+                <li class="active"><a href="#">Channel 1</a></li>
+                <li class="active"><a href="#">Channel 2</a></li>
+                <li class="active"><a href="#">Channel 3</a></li>
+            </ul>
+        </nav>
+        <div id="content">
+
+        </div>
+    </div>
 {% endblock %}
