--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <!-- Our Custom CSS -->
+       <link rel="stylesheet" href="static/styles.css">
+
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
         {% block script %}{% endblock %}
+
         <title>Flack</title>
+        <link rel="icon" href="/static/tiger2.png">
+
     </head>
-    <body>{% block body %}{% endblock %}</body>
+    <body>
+        {% block body %}{% endblock %}
+    </body>
 </html>
