--- a/templates/channel_list.html
+++ b/templates/channel_list.html
@@ -11,9 +11,9 @@
             </div>
             <ul class="list-unstyled components">
                 <p>Channels</p>
-                <li class="active"><a href="#">Channel 1</a></li>
-                <li class="active"><a href="#">Channel 2</a></li>
-                <li class="active"><a href="#">Channel 3</a></li>
+                <li><a href="#">Channel 1</a></li>
+                <li><a href="#">Channel 2</a></li>
+                <li><a href="#">Channel 3</a></li>
             </ul>
         </nav>
         <div id="content">
