--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,7 +4,7 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <!-- Our Custom CSS -->
-       <link rel="stylesheet" href="static/styles.css">
+       <link rel="stylesheet" href="static/output.css">
 
         <!-- Required meta tags -->
         <meta charset="utf-8">
