--- a/static/styles.scss
+++ b/static/styles.scss
@@ -17,5 +17,6 @@ body {
         li { padding-left: 1em; }
         p { font-size: 1.3em; }
         a { color: inherit; }
+        .glyphicon { padding-left: 0.3em; }
     }
 }
