--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,8 +3,9 @@
     <head>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <!-- Our Custom CSS -->
-       <link rel="stylesheet" href="static/output.css">
+       <link rel="stylesheet" href="static/styles.css">
 
         <!-- Required meta tags -->
         <meta charset="utf-8">
@@ -13,7 +14,7 @@
         {% block script %}{% endblock %}
 
         <title>Flack</title>
-        <link rel="icon" href="/static/tiger2.png">
+        <link rel="icon" href="/static/tiger.png">
 
     </head>
     <body>
