--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,19 +2,19 @@
 <html>
     <head>
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <!-- Our Custom CSS -->
-       <link rel="stylesheet" href="static/styles.css">
+        <link rel="stylesheet" href="static/styles/styles.css">
 
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+        <!-- Script -->
         {% block script %}{% endblock %}
 
         <title>Flack</title>
-        <link rel="icon" href="/static/tiger.png">
+        <link rel="icon" href="/static/image/rhino.png">
 
     </head>
     <body>
