add upload file feature

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -102,12 +102,15 @@ body {
 }
 
 .card-img {
-    margin-left: 10px;
     width: 70px;
 }
 
 .card {
     margin-right: 4rem;
+}
+
+.card-body {
+    padding: 1rem;
 }
 
 .label {
