--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -93,7 +93,27 @@ body {
 .border-bottom { border-bottom: 1px solid #e5e5e5; }
 
 
+img {
+    height:2rem;
+}
 
+p {
+    margin-bottom: 0;
+}
+
+.row {
+    margin-left: 0;
+}
+
+.user-img {
+    flex-basis: 5%;
+    max-width: 5%;
+}
+
+.timestamp {
+    font-size: .75rem;
+    color: grey;
+}
 
 
 .container-fluid {
