--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
             <div class="user-img">
                 <a href="#"><img src="static/image/person-square.svg" data-toggle="tooltip" data-placement="bottom" title="{{ name }}"/></a>
             </div>
-            <div class="border col">
+            <div class="border rounded col">
                 <p class="timestamp"><b> {{ name }}</b> &nbsp; <i>{{ timestamp }}</i></p>
                 <p>{{ message }}</p>
                 <a style="{{ style }}" href="{{ attach_src }}" download>
@@ -48,7 +48,7 @@
                         <div id="channels">
                             {% for channel in channels %}
                             <li class="nav-item">
-                                <a href="" class="nav-link" data-channel="{{ channel }}" onclick="switchChannel('{{ channel }}')">
+                                <a href="" class="nav-link channel" data-channel="{{ channel }}" onclick="switchChannel('{{ channel }}')">
                                     <span data-feather="message-circle"></span>{{ channel }}
                                 </a>
                             </li>
@@ -78,6 +78,45 @@
                     <div class="input-group-append">
                         <button id="submit" class="btn btn-secondary" type="button">Submit</button>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="userInfoModal" tabindex="-1" role="dialog" aria-labelledby="userInfoModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="userInfoModalLabel">Create profile</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div id="error-messages" style="color:red; display:none">
+                        <h6>Error messages:</h6>
+                        <ul>
+                            <li>Username is required!</li>
+                        </ul>
+                    </div>
+                    <form>
+                        <div class="form-group">
+                            <label class="col-form-label">Username<span style="color:red">*</span></label>
+                            <input type="text" class="form-control" name="username" />
+                        </div>
+                        <div class="form-group">
+                            <label class="col-form-label">Phone number</label>
+                            <input type="text" class="form-control" name="phone-number" />
+                        </div>
+                        <div class="form-group">
+                            <label class="col-form-label">Introduction</label>
+                            <textarea type="text" class="form-control" name="intro"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" name="submit">Submit</button>
                 </div>
             </div>
         </div>
